Fixed the overflow issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -7,8 +7,8 @@
 }
 
 #card {
-    display: flex;
-    flex-direction: column;
+    /* display: flex;
+    flex-direction: column; */
 
     width: 550px;
     height: 719px;
@@ -45,8 +45,8 @@
     gap: 40px;
     justify-content: space-between;
 
+    height: 530px;
     padding: 40px;
-    height: 100%;
 }
 
 #tasks-body {
@@ -81,7 +81,11 @@
 }
 
 #tasks-ordered {
-    height: 100%;
+    display: flex;
+    flex-direction: column;
+    /* TODO: Fix the gap properly */
+    gap: 15px;
+    height: 250px;
 }
 
 #tasks-ordered-bar {
@@ -93,6 +97,11 @@
     font-size: 12px;
     font-weight: 700;
     color: #d5d4d8;
+}
+
+#tasks-ordered-list {
+    height: 100%;
+    overflow: auto;
 }
 
 #tasks-footer {
